--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -10,7 +10,10 @@ body {
     margin-top: 100px;
     background-color: #222;
 }
-
+.navbar-brand
+{
+	padding: 8px !important;
+}
 
 
 @media(max-width:768px) {
@@ -199,7 +202,7 @@ ul.alert-dropdown {
 /* Custom Colored Panels */
 
 .huge {
-    font-size: 40px;
+    font-size: 30px;
 }
 
 .panel-green {
